--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>Masterclass IA</title>
 </head>
 <body>
-    <a href="perceptron.html">Perceptron</a>
-    <a href="densenet.html">Dense Network</a>
+<h1>Masterclass IA</h1>
+<ul>
+    <li><a href="perceptron.html">Perceptron</a></li>
+    <li><a href="densenet.html">Dense Network</a></li>
+    <li><a href="canvas.html">Canvas</a></li>
+</ul>
 </body>
 </html>
